--- a/public/styles.css
+++ b/public/styles.css
@@ -1,28 +1,48 @@
 body {
-  text-align: center;
-  align-items: center;
   font-family: "Roboto", sans-serif;
+  display: table;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.app {
+  text-align: center;
+
+  display: table-cell;
+  vertical-align: middle;
 }
 
 .link-box {
   width: 50vw;
-  height: 50vh;
   border: 1px;
+  border-radius: 10px;
   margin: auto;
   border-style: dashed;
-  padding: 10px;
+  padding: 20px;
 }
 
 .link {
   margin: 10px auto;
-  width: 40vw;
-  padding: 20px;
+  max-width: 40vw;
+  padding: 20px 20px 20px 50px;
   text-align: left;
   font-size: 20px;
+  color: black;
 
   /* border: 1px;
   border-style: solid; */
   border-radius: 50px;
 
   box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
+}
+
+a {
+  text-decoration: none;
+}
+
+.link:hover {
+  box-shadow: rgba(0, 0, 0, 0.15) 1px 1px 1px;
 }
