--- a/public/styles.css
+++ b/public/styles.css
@@ -8,7 +8,7 @@ body {
   width: 100%;
 }
 
-app {
+#app {
   text-align: center;
   display: table-cell;
   vertical-align: middle;
@@ -20,7 +20,7 @@ app {
   border-radius: 10px;
   margin: auto;
   border-style: dashed;
-  padding: 20px;
+  padding: 50px 20px;
 }
 
 .link {
