--- a/public/styles.css
+++ b/public/styles.css
@@ -22,6 +22,11 @@ body {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   padding: 50px 20px;
 }
+.title {
+  font-family: 'Monoton', cursive;
+  font-size: 500%;
+  margin-bottom: 50px;
+}
 
 a {
   text-decoration: none;
